--- a/Code/ShipWorks.StandaloneSplash/App.xaml
+++ b/Code/ShipWorks.StandaloneSplash/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="ShipWorksUpgradeProgrss.App"
+﻿<Application x:Class="ShipWorks.SplashScreen.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:ShipWorksUpgradeProgrss"
+             xmlns:local="clr-namespace:ShipWorks.SplashScreen"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
