--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportParameterizedQueryControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportParameterizedQueryControl.xaml
@@ -64,7 +64,7 @@
 
             <TextBox Grid.Column="1"
                      Margin="10 0 15 0"
-                     Text="{Binding SampleParameter}"/>
+                     Text="{Binding SampleParameterValue}"/>
 
             <Button Grid.Column="2"
                 HorizontalAlignment="Right"
