--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportMapSettingsControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportMapSettingsControl.xaml
@@ -16,12 +16,11 @@
              mc:Ignorable="d">
     <Control.Resources>
         <ui:BooleanToVisibilityConverter x:Key="BoolToVisibilityConverter" />
-        <ui:BooleanToVisibilityConverter x:Key="InverseBoolToVisibilityConverter" Invert="True" />
         <ui:RadioButtonCheckedConverter x:Key="RadioButtonCheckedConverter"/>
         <system:Boolean x:Key="True">True</system:Boolean>
         <system:Boolean x:Key="False">False</system:Boolean>
 
-        <Style TargetType="{x:Type Label}">
+        <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Margin" Value="0 0 10 10" />
             <Setter Property="Padding" Value="0" />
             <Setter Property="HorizontalAlignment" Value="Right" />
@@ -34,13 +33,13 @@
             <Setter Property="VerticalContentAlignment" Value="Center" />
         </Style>
     </Control.Resources>
-    <Grid Margin="20 10 10 10">
+    <Grid Margin="23 10 10 10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>            
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0"
-               Margin="0 0 -20 10"
+               Margin="0 0 0 10"
                Text="Import Settings"
                FontWeight="Bold" 
                HorizontalAlignment="Left"/>
@@ -66,9 +65,9 @@
                     HorizontalAlignment="Left"
                     Margin="0 0 0 10"/>
             
-            <Label Grid.Row="1"
+            <TextBlock Grid.Row="1"
                    Grid.Column="0"                
-                   Content="Name:" 
+                   Text="Name:" 
                    VerticalAlignment="Center"/>
             <TextBox Grid.Row="1"
                      Grid.Column="1"
@@ -77,9 +76,9 @@
                      Margin="0 0 0 10"
                      Height="23"/>
 
-            <Label Grid.Row="2"
+            <TextBlock Grid.Row="2"
                    Grid.Column="0"
-                   Content="Download:"/>
+                   Text="Download:"/>
             <Grid Grid.Row="2"
                   Grid.Column="1">
                 <Grid.RowDefinitions>
@@ -107,9 +106,9 @@
                                         ConverterParameter={x:Static odbcDownload:OdbcImportStrategy.OnDemand}}" />
             </Grid>
 
-            <Label Grid.Row="3"
+            <TextBlock Grid.Row="3"
                    Grid.Column="0"
-                   Content="Column Source:" />
+                   Text="Column Source:" />
             <Grid Grid.Row="3"
                   Grid.Column="1">
                 <Grid.RowDefinitions>
@@ -130,9 +129,9 @@
                                         ConverterParameter={StaticResource False}}"/>
             </Grid>
 
-            <Label Grid.Row="4"
+            <TextBlock Grid.Row="4"
                    Grid.Column="0"
-                   Content="Table:" 
+                   Text="Table:" 
                    VerticalAlignment="Center"
                    Visibility="{Binding ColumnSourceIsTable,
                                 Converter={StaticResource BoolToVisibilityConverter}}"/>
@@ -147,15 +146,17 @@
                                   Visibility="{Binding ColumnSourceIsTable,
                                                Converter={StaticResource BoolToVisibilityConverter}}"/>
 
-            <Label Grid.Row="4"
+            <TextBlock Grid.Row="4"
                    Grid.Column="0"
-                   Content="Query Type:"
-                   Visibility="{Binding ColumnSourceIsTable,
-                                Converter={StaticResource InverseBoolToVisibilityConverter}}"/>
+                   Text="Query Type:"
+                   Visibility="{Binding ParameterizedQueryAllowed,
+                                Converter={StaticResource BoolToVisibilityConverter}}">
+                
+            </TextBlock>
             <Grid Grid.Row="4"
                   Grid.Column="1"
-                  Visibility="{Binding ColumnSourceIsTable,
-                                Converter={StaticResource InverseBoolToVisibilityConverter}}">
+                  Visibility="{Binding ParameterizedQueryAllowed,
+                                Converter={StaticResource BoolToVisibilityConverter}}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto"/>
                     <RowDefinition Height="auto"/>
