--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportSubqueryControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportSubqueryControl.xaml
@@ -15,7 +15,7 @@
     <UserControl.Resources>
         <ui:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
     </UserControl.Resources>
-    <Grid>        
+    <Grid Margin="23 10 10 10">        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -28,8 +28,8 @@
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Row="0"
-                   Margin="0 0 -20 10"
-                   Text="Custom Import Query - Subquery"
+                   Margin="0 0 0 10"
+                   Text="Custom Import Query"
                    FontWeight="Bold" 
                    HorizontalAlignment="Left"/>
 
