TP#30253: Replace filler text in OdbcImportMapSettingsControl and OdbcImportParameterizedQueryControl

--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportMapSettingsControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportMapSettingsControl.xaml
@@ -175,7 +175,8 @@
                                         Converter={StaticResource RadioButtonCheckedConverter},
                                         ConverterParameter={StaticResource False}}"/>
                 <TextBlock Grid.Row="2"
-                           Text="Some text explaining the difference and when you should use parameterized query"/>
+                           Text="{Binding QueryInfo}"
+                           TextWrapping="Wrap"/>
             </Grid>
         </Grid>        
     </Grid>
