--- a/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportParameterizedQueryControl.xaml
+++ b/Code/ShipWorks.Stores.UI/Platforms/Odbc/Controls/Import/OdbcImportParameterizedQueryControl.xaml
@@ -37,7 +37,7 @@
         <TextBlock Grid.Row="1"
                    Margin="0 0 0 10"
                    TextWrapping="Wrap"
-                   Text="Some text explaining how to use the parameterized query and which parameter is currently being used (Order # or LM date)"/>
+                   Text="{Binding ParameterizedQueryInfo}"/>
 
         <TextBlock Grid.Row="2"
                    Text="Your query for custom import:" />
@@ -64,7 +64,7 @@
 
             <TextBox Grid.Column="1"
                      Margin="10 0 15 0"
-                     Text="{Binding SampleParameterValue}"
+                     Text="{Binding SampleParameterValue, UpdateSourceTrigger=PropertyChanged}"
                      VerticalContentAlignment="Center"/>
 
             <Button Grid.Column="2"
