--- a/Code/ShipWorks.UI/Controls/MainGrid/MainGridHeader.xaml
+++ b/Code/ShipWorks.UI/Controls/MainGrid/MainGridHeader.xaml
@@ -62,6 +62,45 @@
                 x:Key="AdvancedSearchChevronAngle"
                 False="0"
                 True="180" />
+            <Style TargetType="Button" x:Key="SearchButton">
+                <Setter Property="OverridesDefaultStyle" Value="True" />
+                <Setter Property="Background" Value="Transparent" />
+                <Setter Property="Foreground" Value="Transparent" />
+
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border x:Name="border" 
+                                    BorderThickness="0"
+                                    BorderBrush="Transparent"
+                                    Background="{TemplateBinding Background}">
+                                <ContentPresenter x:Name="content" 
+                                          Content="{TemplateBinding Content}"
+                                          HorizontalAlignment="Center" 
+                                          VerticalAlignment="Center" />
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter TargetName="border" 
+                                            Property="Background" 
+                                            Value="GhostWhite" />
+                                </Trigger>
+                                <Trigger Property="IsPressed" Value="True">
+                                    <Setter TargetName="content" Property="RenderTransform" >
+                                        <Setter.Value>
+                                            <TranslateTransform Y="1.0" />
+                                        </Setter.Value>
+                                    </Setter>
+                                </Trigger>
+                                <Trigger Property="IsEnabled" Value="False">
+                                    <Setter TargetName="border" Property="Opacity" Value="0.7" />
+                                    <Setter Property="Foreground" Value="Gray" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
         </ResourceDictionary>
     </UserControl.Resources>
     <Border BorderThickness="1">
@@ -189,6 +228,7 @@
                         <Button
                             Background="White"
                             BorderThickness="0"
+                            Style="{StaticResource SearchButton}"
                             Command="{Binding EndSearch}"
                             IsEnabled="{Binding IsSearchActive}">
                             <Image
