TP#30382: Hide icon for splash screen

--- a/Code/ShipWorks.SplashScreen/MainWindow.xaml
+++ b/Code/ShipWorks.SplashScreen/MainWindow.xaml
@@ -9,7 +9,8 @@
         AllowsTransparency="True"
         WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize"
-        Title="ShipWorks" Height="255" Width="505">
+        Title="ShipWorks" Height="255" Width="505"
+        ShowInTaskbar="False">
     <Window.Background>
         <ImageBrush ImageSource="/ShipWorks.SplashScreen;component/background.png"></ImageBrush>
     </Window.Background>
